2018-08-15  Thomas E. Dickey  <dickey@invisible-island.net>

	* tests/rep.py, tests/dch.py, tests/save_restore_cursor.py, tests/decstbm.py, tests/decscl.py, tests/nel.py, tests/sm.py, tests/vt.py, tests/sd.py, tests/vpr.py, tests/el.py, tests/dl.py, tests/ich.py, tests/il.py, tests/ind.py, tests/decic.py, tests/ed.py, tests/decfi.py, tests/hpr.py, tests/ris.py, tests/dcs.py, tests/decsel.py, tests/lf.py, esc.py, tests/decsed.py, tests/decdc.py, tests/ri.py, tests/sos.py, tests/decstr.py, tests/ff.py, tests/su.py, tests/decset.py, tests/pm.py, tests/apc.py:
	add/use esc.empty() to return the "right" checksum value for cells that were
	erased as opposed to having an explicit space written.

2018-08-09  George.Nachman

	* tests/cht.py: iTerm2 added CHT support

2018-05-07  Thomas E. Dickey  <dickey@invisible-island.net>

	* esccmd.py:
	restore a chunk needed for xterm - made this pull request #2

	* README.txt, escargs.py, esccmd.py, escutil.py, tests/bs.py, tests/decbi.py, tests/xterm_winops.py:
	Rsync to George Nachman's updates in
	https://github.com/gnachman/esctest/tree/914d5f7e4840e548f0fc30f2f15f25e3078b4a00

2018-04-25  Thomas E. Dickey  <dickey@invisible-island.net>

	* tests/xterm_winops.py, escutil.py: stylistic change per Nachman

	* tests/ris.py:
	trim comment for iTerm2 vs ALTBUF, overlooked change in master by Nachman

	* tests/decset.py:
	remove an overlooked/obsolete comment for test_DECSET_DECLRMM()

	* escutil.py:
	if the terminal is not xterm, GetScreenSizePixels() will just return a
	fixed size, suggested by Nachman

	* escutil.py: stylistic change per Nachman

2018-04-24  Thomas E. Dickey  <dickey@invisible-island.net>
